--- a/Contact.html
+++ b/Contact.html
@@ -162,7 +162,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Cats.html">
+                    <a class="nav-link" href="cats.html">
                         <i class="fas fa-cat me-2 text-yellow"></i>Cats
                     </a>
                 </li>
