--- a/Contact.html
+++ b/Contact.html
@@ -167,7 +167,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Dogs,html">
+                    <a class="nav-link" href="Dogs.html">
                         <i class="fas fa-dog me-2 text-yellow"></i>Dogs
                     </a>
                 </li>
