--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Cats.html">
+                    <a class="nav-link" href="cats.html">
                         <i class="fas fa-cat me-2 text-yellow"></i>Cats
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Dog.html">
+                    <a class="nav-link" href="Dogs.html">
                         <i class="fas fa-dog me-2 text-yellow"></i>Dogs
                     </a>
                 </li>
