--- a/shop.html
+++ b/shop.html
@@ -141,7 +141,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Cats.html">
+                    <a class="nav-link" href="cats.html">
                         <i class="fas fa-cat me-2 text-yellow"></i>Cats
                     </a>
                 </li>
